intervalsets-macros/tests/ui/closed_on_unbounded.stderr
error: unbounded side must use an open delimiter — write `(.., x]` not `[.., x]` (infinity is never "included")
 --> tests/ui/closed_on_unbounded.rs:4:23
  |
4 |     let _ = interval!("[.., 10]");
  |                       ^^^^^^^^^^
